[package]
name = "gonhanh-windows"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
parking_lot = "0.12"
lazy_static = "1.4"
log = "0.4"
env_logger = "0.11"
directories = "5.0"
image = { version = "0.24", default-features = false, features = ["png"] }


[dependencies.windows]
version = "0.52"
features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_Controls", # Dialog controls
    "Win32_System_LibraryLoader",
    "Win32_System_Threading",
    "Win32_System_Diagnostics_Debug",
    "Win32_Graphics_Gdi",
    "Win32_System",
    "Win32_UI_Input",
    "Win32_System_Registry",
    "Win32_UI_Accessibility",
    "Win32_System_ProcessStatus", # For getting process name
    "Win32_Security", # Needed for RegCreateKeyExW
    "Win32_UI_Shell", # Needed for Shell_NotifyIconW
    "Win32_UI_HiDpi", # For DPI awareness
]


[dependencies.gonhanh-core]
path = "./core"

[build-dependencies]
winres = "0.1"

# Optimize for size
[profile.release]
opt-level = "z"     # Optimize for size
lto = true          # Link Time Optimization
codegen-units = 1   # Reduce parallel code generation for better optimization
panic = "abort"     # Remove panic unwinding
strip = true        # Strip symbols
